--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <!-- tilt js-->
-    <script type="text/javascript" src="../js/vanilla-tilt.js"></script>
+    <script type="text/javascript" src="js/vanilla-tilt.js"></script>
     <style>
         body {
             font-family: 'Kaushan Script', cursive;
