--- a/index.html
+++ b/index.html
@@ -25,17 +25,23 @@
                         HELLO WORLD!!!
                     </h1>
                     <br>
-                    <script>
+                    <div id="input-data"></div>
+                    <!-- <script>
                         for (let i = 0; i < 10; i++) {
                             document.write("<a style='text-decoration:none; color:inherit' href='https://letmegooglethat.com/?q=rick+roll'>Hello World</a><br>")
                         }
-                    </script>
+                    </script> -->
                 </div>
             </div>
         </div>
     </div>
     <!-- tilt js-->
     <script src="vanilla-tilt.js" type="text/javascript"></script>
+    <script>
+          for (let i = 0; i < 10; i++) {
+            document.getElementById('input-data').innerHTML += "<a style='text-decoration:none; color:inherit' href='https://letmegooglethat.com/?q=rick+roll'>Hello World</a><br>"
+            }
+    </script>
     <style>
         body {
             font-family: 'Kaushan Script', cursive;
